# flet-build-test

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.py
src/my_modules/: some_module.py  utils.py
